--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -14,14 +14,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: archlinux:latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Install Dependencies
         shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install \
+          sudo pacman -Sy --noconfirm --needed \
           git 
 
       # Tmate ##
