--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -14,7 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: archlinux:latest
+    container:
+      image: manjarolinux/base
     steps:
       - uses: actions/checkout@v3
 
