--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -25,11 +25,14 @@ jobs:
           sudo pacman -Sy --noconfirm --needed \
           git \
           openssh \
-          xz
+          xz \
+          tmate
 
       # Tmate ##
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
+        with:
+          install-dependencies: false
 
       # - name: Update github
       #   run: |
