--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -54,27 +54,72 @@ jobs:
           sudo mkdir -p /etc/pacman.d/gnupg/
           sudo cp -r biglinux-key/usr/share/pacman/keyrings/* /etc/pacman.d/gnupg/
           sudo rm -r biglinux-key
+          
+          sudo pacman -Sy
 
       # Tmate ##
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
         with:
           install-dependencies: false
+          
+      - name: remake PKGBUILD
+        shell: bash
+        run: |
+          #variables
+          repo=stable
+          mod=nvidia
+          mkdepends=nvidia-utils
+          xanmod=linux-xanmod
 
-      # - name: Update github
-      #   run: |
-      #     git add --all
-      #     git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      #     git config --local user.name "github-actions[bot]"
-      #     if [ -n "$(git commit -m "new translate" -a | grep "nothing to commit")" ];then exit 0; fi
+          #clean workdir
+          rm -r *
 
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: ${{ github.ref }}
+          xanmajor=$(curl -s https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=$xanmod | sed 's/<[^>]*>//g' | grep _major= | cut -d "=" -f2 | sed 's/\.//')
 
-      # - name: Send Hooks BigLinux Build Package
-      #   shell: bash
-      #   run: |
-      #     curl -X POST -H "Accept: application/json" -H "Authorization: token ${{ secrets.WEBHOOK_TOKEN }}" --data '{"event_type": "${{ github.repository }}", "client_payload": { "branch": "${{ github.ref_name }}", "url": "https://github.com/${{ github.repository }}", "version": "1.2.3"}}' https://api.github.com/repos/BigLinux-Package-Build/build-package/dispatches
+          #clone extra module
+          git clone https://gitlab.manjaro.org/packages/extra/linux${xanmajor}-extramodules/${mod}.git
+
+          dir=$(ls)
+          mv ${dir}/* .
+          rm -r $dir
+
+          #_linuxprefix=
+          sed -i "s/_linuxprefix=.*/_linuxprefix=$xanmod/" PKGBUILD
+
+          #_extramodules=
+          xanverponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | cut -d "-" -f1)
+          find="find \/usr\/lib\/modules -type d -iname "${xanverponto}*xanmod*" | rev | cut -d "'"\/"'" -f1 | rev"
+          sed -i 's/_extramodules=.*/_extramodules=$('"$find"')/' PKGBUILD
+
+          #pkgrel=
+          xanversemponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | sed 's/\.//g' | sed 's/\-//g')
+          sed -i 's/pkgrel=.*/pkgrel='"${xanversemponto}"'/' PKGBUILD
+
+          #_kernver=
+          sed -i 's/_kernver=.*/_kernver=$('"$find"')/' PKGBUILD
+
+          #pkgver
+          pkgver=$(pacman -Ss $mkdepends| grep $mkdepends | grep -v "\-${mkdepends}" | cut -d " " -f2 | sed "s|-.*||")
+          sed -i "s/pkgver=.*/pkgver=${pkgver}/" PKGBUILD
+
+          #sha256sums=
+          sed -i 's/sha256sums=.*/sha256sums=(SKIP)/' PKGBUILD
+
+      - name: Update github
+        run: |
+          git add --all
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          if [ -n "$(git commit -m "new translate" -a | grep "nothing to commit")" ];then exit 0; fi
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+
+      - name: Send Hooks BigLinux Build Package
+        shell: bash
+        run: |
+          curl -X POST -H "Accept: application/json" -H "Authorization: token ${{ secrets.WEBHOOK_TOKEN }}" --data '{"event_type": "${{ github.repository }}", "client_payload": { "branch": "${{ github.ref_name }}", "url": "https://github.com/${{ github.repository }}", "version": "1.2.3"}}' https://api.github.com/repos/BigLinux-Package-Build/build-package/dispatches
