--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -9,7 +9,7 @@ on:
     
   repository_dispatch:
     types:
-      - linux-xanmod*/*
+      - */*
 
 jobs:
   build:
@@ -28,6 +28,9 @@ jobs:
           xz \
           tmate
           
+      - name: Add BigLinux Repo
+        shell: bash
+        run: |
           #add biglinux repository
           sudo sed -i '/\[core\]/{h;s/.*/\[biglinux-update-stable\]/;p;x;}' /etc/pacman.conf
           sudo sed -i '/\[core\]/{h;s/.*/SigLevel = PackageRequired/;p;x;}' /etc/pacman.conf
@@ -42,6 +45,7 @@ jobs:
           SigLevel = PackageRequired
           Server = https://repo.biglinux.com.br/stable/$arch' | sudo tee -a /etc/pacman.conf
           
+          #add biglinux keyring
           sudo git clone --depth 1 https://github.com/biglinux/biglinux-keyring.git
           pushd biglinux-keyring
             sudo install -m0644 biglinux.gpg /usr/share/pacman/keyrings/
@@ -49,7 +53,6 @@ jobs:
             sudo install -m0644 biglinux-trusted /usr/share/pacman/keyrings/
           popd
           sudo rm -rf biglinux-keyring
-          
           sudo git clone https://github.com/biglinux/biglinux-key.git
           sudo mkdir -p /etc/pacman.d/gnupg/
           sudo cp -r biglinux-key/usr/share/pacman/keyrings/* /etc/pacman.d/gnupg/
@@ -63,48 +66,67 @@ jobs:
         with:
           install-dependencies: false
           
-      - name: remake PKGBUILD
-        shell: bash
+      - name: echo PayLoads
         run: |
-          #variables
-          repo=stable
-          mod=nvidia
-          mkdepends=nvidia-utils
-          xanmod=linux-xanmod
-
-          #clean workdir
-          rm -r *
-
-          xanmajor=$(curl -s https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=$xanmod | sed 's/<[^>]*>//g' | grep _major= | cut -d "=" -f2 | sed 's/\.//')
-
-          #clone extra module
-          git clone https://gitlab.manjaro.org/packages/extra/linux${xanmajor}-extramodules/${mod}.git
-
-          dir=$(ls)
-          mv ${dir}/* .
-          rm -r $dir
-
-          #_linuxprefix=
-          sed -i "s/_linuxprefix=.*/_linuxprefix=$xanmod/" PKGBUILD
-
-          #_extramodules=
-          xanverponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | cut -d "-" -f1)
-          find="find \/usr\/lib\/modules -type d -iname "${xanverponto}*xanmod*" | rev | cut -d "'"\/"'" -f1 | rev"
-          sed -i 's/_extramodules=.*/_extramodules=$('"$find"')/' PKGBUILD
-
-          #pkgrel=
-          xanversemponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | sed 's/\.//g' | sed 's/\-//g')
-          sed -i 's/pkgrel=.*/pkgrel='"${xanversemponto}"'/' PKGBUILD
-
-          #_kernver=
-          sed -i 's/_kernver=.*/_kernver=$('"$find"')/' PKGBUILD
-
-          #pkgver
-          pkgver=$(pacman -Ss $mkdepends| grep $mkdepends | grep -v "\-${mkdepends}" | cut -d " " -f2 | sed "s|-.*||")
-          sed -i "s/pkgver=.*/pkgver=${pkgver}/" PKGBUILD
-
-          #sha256sums=
-          sed -i 's/sha256sums=.*/sha256sums=(SKIP)/' PKGBUILD
+          echo "repo: ${{ github.event.client_payload.repo }}"
+          echo "mod: ${{ github.event.client_payload.mod }}"
+          echo "mkdepends: ${{ github.event.client_payload.mkdepends }}"
+          echo "xanmod: ${{ github.event.client_payload.xanmod }}"
+          
+      - name: Remake PKGBUILD
+        id: remakepkg
+        uses: BigLinux-Package-Build/xanmod-extra-module@main
+        with:
+          repo: ${{ github.event.client_payload.repo }}
+          mod: ${{ github.event.client_payload.mod }}
+          mkdepends: ${{ github.event.client_payload.mkdepends }}
+          xanmod: ${{ github.event.client_payload.xanmod }}
+          
+#       - name: remake PKGBUILD
+#         shell: bash
+#         run: |
+#           #variables
+#           repo=stable
+#           mod=nvidia
+#           mkdepends=nvidia-utils
+#           xanmod=linux-xanmod
+# 
+#           #clean workdir
+#           rm -r *
+# 
+#           xanmajor=$(curl -s https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=$xanmod | sed 's/<[^>]*>//g' | grep _major= | cut -d "=" -f2 | sed 's/\.//')
+# 
+#           #clone extra module
+#           git clone https://gitlab.manjaro.org/packages/extra/linux${xanmajor}-extramodules/${mod}.git
+# 
+#           dir=$(ls)
+#           mv ${dir}/* .
+#           rm -r $dir
+# 
+#           #_linuxprefix=
+#           sed -i "s/_linuxprefix=.*/_linuxprefix=$xanmod/" PKGBUILD
+# 
+#           #_extramodules=
+#           xanverponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | cut -d "-" -f1)
+#           find="find \/usr\/lib\/modules -type d -iname "${xanverponto}*xanmod*" | rev | cut -d "'"\/"'" -f1 | rev"
+#           sed -i 's/_extramodules=.*/_extramodules=$('"$find"')/' PKGBUILD
+# 
+#           #pkgrel=
+#           xanversemponto=$(pacman -Ss $xanmod | grep biglinux-${repo} | grep -v headers | grep -v "$xanmod-" | cut -d " " -f2 | sed 's/\.//g' | sed 's/\-//g')
+#           sed -i 's/pkgrel=.*/pkgrel='"${xanversemponto}"'/' PKGBUILD
+# 
+#           #_kernver=
+#           sed -i 's/_kernver=.*/_kernver=$('"$find"')/' PKGBUILD
+# 
+#           #pkgver
+#           pkgver=$(pacman -Ss $mkdepends| grep $mkdepends | grep -v "\-${mkdepends}" | cut -d " " -f2 | sed "s|-.*||")
+#           sed -i "s/pkgver=.*/pkgver=${pkgver}/" PKGBUILD
+# 
+#           #sha256sums=
+#           sed -i 's/sha256sums=.*/sha256sums=(SKIP)/' PKGBUILD
+#           
+#           #.install
+#           sed -i 's/EXTRAMODULES=.*/EXTRAMODULES=$('"$find"')/;s/depmod.*/depmod $('"$find"')/' *.install
 
       - name: Update github
         run: |
