--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -60,11 +60,11 @@ jobs:
           
           sudo pacman -Sy
 
-      # Tmate ##
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        with:
-          install-dependencies: false
+      # # Tmate ##
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
+      #   with:
+      #     install-dependencies: false
           
       - name: echo PayLoads
         run: |
