--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -60,11 +60,6 @@ jobs:
           
           sudo pacman -Sy
 
-      # # Tmate ##
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
-      #   with:
-      #     install-dependencies: false
           
       - name: echo PayLoads
         run: |
@@ -127,6 +122,12 @@ jobs:
 #           
 #           #.install
 #           sed -i 's/EXTRAMODULES=.*/EXTRAMODULES=$('"$find"')/;s/depmod.*/depmod $('"$find"')/' *.install
+
+      # Tmate ##
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          install-dependencies: false
 
       - name: Update github
         run: |
