--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
         with:
-          install-dependencies: false
+          # install-dependencies: false
           
       # - name: Remake PKGBUILD
       #   id: remakepkg
