--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -71,7 +71,7 @@ jobs:
       # Tmate ##
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        with:
+        # with:
           # install-dependencies: false
           
       # - name: Remake PKGBUILD
