--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -14,19 +14,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # container:
-    #   image: manjarolinux/base
+    container:
+      image: manjarolinux/base
     steps:
       - uses: actions/checkout@v3
 
-#       - name: Install Dependencies
-#         shell: bash
-#         run: |
-#           sudo pacman -Sy --noconfirm --needed \
-#           git \
-#           openssh \
-#           xz \
-#           tmate
+      - name: Install Dependencies
+        shell: bash
+        run: |
+          sudo pacman -Sy --noconfirm --needed \
+          git \
+          openssh \
+          xz \
+          tmate
 #           
 #       - name: Add BigLinux Repo
 #         shell: bash
@@ -71,8 +71,8 @@ jobs:
       # Tmate ##
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        # with:
-          # install-dependencies: false
+        with:
+          install-dependencies: false
           
       # - name: Remake PKGBUILD
       #   id: remakepkg
