--- a/.github/workflows/Remake-PKGBUILD-and-Build.yml
+++ b/.github/workflows/Remake-PKGBUILD-and-Build.yml
@@ -1,7 +1,7 @@
 name: Remake PKGBUILD and Build Package
 
 on:
-  workflow_dispatch:
+  # workflow_dispatch:
 
   # push:
     #branches: [ "master", "main", "*" ]
