--- a/.github/workflows/Remake-PKGBUILD-and-Build.yml
+++ b/.github/workflows/Remake-PKGBUILD-and-Build.yml
@@ -44,6 +44,7 @@ jobs:
           git config --local user.email "${{ secrets.GIT_USER }}@users.noreply.github.com"
           git config --local user.name "${{ secrets.GIT_USER }}"
           if [ -n "$(git commit -m "new version" -a | grep "nothing to commit")" ];then exit 0; fi
+          echo "newVer=true" >> $GITHUB_ENV
 
       - name: Push changes
         uses: ad-m/github-push-action@master
@@ -54,4 +55,7 @@ jobs:
       - name: Send Hooks BigLinux Build Package
         shell: bash
         run: |
-          curl -X POST -H "Accept: application/json" -H "Authorization: token ${{ secrets.WEBHOOK_TOKEN }}" --data '{"event_type": "${{ github.repository }}", "client_payload": { "branch": "${{ github.ref_name }}", "url": "https://github.com/${{ github.repository }}", "branch_build": "${{ github.event.client_payload.branch_build }}"}}' https://api.github.com/repos/BigLinux-Package-Build/build-package/dispatches
+          if [ "$newVer" = "true" ];then
+            curl -X POST -H "Accept: application/json" -H "Authorization: token ${{ secrets.WEBHOOK_TOKEN }}" --data '{"event_type": "${{ github.repository }}", "client_payload": { "branch": "${{ github.ref_name }}", "url": "https://github.com/${{ github.repository }}", "branch_build": "${{ github.event.client_payload.branch_build }}"}}' https://api.github.com/repos/BigLinux-Package-Build/build-package/dispatches
+          fi
+          
